k8s/manifests/echoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  selector:
    app.kubernetes.io/name: echoserver
  ports:
  - port: 8080
    targetPort: 8080
