k8s/manifests/echoserver/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echoserver

spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`echoserver.harvestasya.org`)
    services:
    - name: echoserver
      port: 8080
    middlewares:
    - name: security-headers
      namespace: traefik

  tls:
    secretName: harvestasya-wildcard-tls
